// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component testing Input 1`] = `
<DocumentFragment>
  <input
    class="sc-bczRLJ cAcncO"
  />
</DocumentFragment>
`;

exports[`Input component testing Input disabled 1`] = `
<DocumentFragment>
  <input
    class="sc-bczRLJ cAcncO"
    disabled=""
  />
</DocumentFragment>
`;

exports[`Input component testing Input error 1`] = `
<DocumentFragment>
  <input
    aria-invalid="true"
    class="sc-bczRLJ jyXGoo"
  />
</DocumentFragment>
`;

exports[`Input component testing Input fullWidth 1`] = `
<DocumentFragment>
  <input
    class="sc-bczRLJ jVxzke"
  />
</DocumentFragment>
`;

exports[`Input component testing Input multiline 1`] = `
<DocumentFragment>
  <textarea
    class="sc-bczRLJ kOBsmM"
  />
</DocumentFragment>
`;

exports[`Input component testing Input sizes 1`] = `
<DocumentFragment>
  <input
    class="sc-bczRLJ cZltYo"
  />
</DocumentFragment>
`;

exports[`Input component testing Input sizes 2`] = `
<DocumentFragment>
  <input
    class="sc-bczRLJ cAcncO"
  />
</DocumentFragment>
`;

exports[`Input component testing Input sizes 3`] = `
<DocumentFragment>
  <input
    class="sc-bczRLJ jbZYFV"
  />
</DocumentFragment>
`;

exports[`Input component testing Input variants 1`] = `
<DocumentFragment>
  <input
    class="sc-bczRLJ cAcncO"
  />
</DocumentFragment>
`;

exports[`Input component testing Input variants 2`] = `
<DocumentFragment>
  <input
    class="sc-bczRLJ fzEmLy"
  />
</DocumentFragment>
`;
